
NEW FEATURES

    * Better integration with Bioconductor API:
      - Added BiocParallel support for polymeraseWave().
      - Propagate mcols() from GRanges, remove hard-coded column names, and
        limit use of data.frame objects.
      - Drop functionality such as readBed() and writeWiggle() already present
        in the rtracklayer package maintained by the Bioconductor core team.
    * polymeraseWave() now has a progress bar and has faster processing from
      several changes:
      - Multi-core processing.
      - Less memory usage.
      - HMM calculations 10x faster not including muti-core processing.
      - Genes are ignored if they have no reads within or nearby instead of
        blindly processing all annotated genes.

SIGNIFICANT USER-VISIBLE CHANGES

    * Remove functions:
      - readBed() and writeWiggle() reimplement rtracklayer import.bed(), and
        export.bw() / export.wig().
      - tlsDeming(), tlsLoess(), and tlsSvd() total least squares fit functions,
        commented as unreliable by the author and not used anywhere in the code
        base.
      - Redundant runMetaGene-like functions metaGeneMatrix() and metaGene_nL().
      - averagePlot() does not have a sufficiently broad use case.
    * Remove function arguments:
      - Broken NonMap/UnMAQ argument of polymeraseWave() and pausingIndex().
      - Buggy resampling arguments of getTxDensity().
      - Debug parameters from many functions.  For troubleshooting faults, it is
        much more informative to use debugonce(), browser(), etc per
        adv-r.had.co.nz and improve the now included unit tests.
    * Verbose flag now works for C functions.  The large volume of C messages
      can be silenced as originally intended instead of always being verbose.
    * Replace sweave package vignette with Rmd for easier user interaction.
      Less effort should be needed to maintain the vignette due to simpler
      syntax, and fewer obtuse LaTeX errors.