@@ -6,7 +6,7 @@ importFrom("grDevices", "rgb")
 importFrom(
     "graphics", "abline", "axis", "par", "plot.new", "plot.window", "rect",
     "text", "title")
-importFrom("methods", "is")
+importFrom("methods", "is", "as")
 importFrom("parallel", "mclapply")
 importFrom(
     "stats", "fisher.test", "loess", "ppois", "predict", "qnorm", "smooth")
